<resources>
    <string name="app_name">蜥蜴时达</string>

    <string name="str_remind">蜥蜴提示：开启指纹用户登录或者提现时使用</string>
    <string name="str_account_remind">第三方账户提醒</string>
    <string name="str_update_withdraw_psd">修改提现密码</string>
    <string name="str_forget_withdraw_psd">忘记提现密码</string>
    <string name="str_version">版本</string>
    <string name="str_version_code">版本号</string>
    <string name="str_clear_canche">清理缓存</string>
    <string name="str_order_p">1、穿好防护服。\n2、戴好防护手套。\n3、注意周边环境\n4、根据人体大小，摄片部位，合理选择参数。\n5、随时观察照片质量，出现异常应检查摄片机是否正常，如果异常应立即报告维修人员</string>


    <string name="image">图片</string>
    <string name="confirm">确定</string>
    <string name="preview">预览</string>
    <string name="select">选择</string>

    <string name="server_tel">0532-58513266</string>
    <string name="company_net">http://xiyicontrol.com</string>
    <string name="company_name">LIZARD OF QINGDAO</string>
</resources>