<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_backgroud_color"
    android:orientation="vertical"
    >

    <include layout="@layout/layout_title"></include>


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="安全防护"
        android:layout_marginTop="@dimen/default_radius"
        android:layout_marginLeft="@dimen/default_margin"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/defalut_layout_height"
        android:background="@color/color_white"
        android:layout_marginTop="@dimen/default_radius"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/default_margin"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="指纹开启"
            android:gravity="center_vertical"
            android:textSize="@dimen/default_text_size"
            />
        <com.example.wsq.android.view.SwitchView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_remind"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_radius"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_account_remind"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_radius"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/defalut_layout_height"
        android:background="@color/color_white"
        android:layout_marginTop="@dimen/default_radius"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/default_margin"
        android:paddingRight="@dimen/default_margin"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/str_update_withdraw_psd"
            android:gravity="center_vertical"
            android:textSize="@dimen/default_text_size"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/defalut_layout_height"
        android:background="@color/color_white"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/default_margin"
        android:paddingRight="@dimen/default_margin"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/str_forget_withdraw_psd"
            android:gravity="center_vertical"
            android:textSize="@dimen/default_text_size"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_version"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/defalut_layout_height"
        android:background="@color/color_white"
        android:layout_marginTop="@dimen/default_radius"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/default_margin"
        android:paddingRight="@dimen/default_margin"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/str_version_code"
            android:gravity="center_vertical"
            android:textSize="@dimen/default_text_size"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="v1.0.1"
            android:gravity="center_vertical"
            android:textSize="@dimen/default_text_size"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/defalut_layout_height"
        android:background="@color/color_white"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/default_margin"
        android:paddingRight="@dimen/default_margin"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/str_clear_canche"
            android:gravity="center_vertical"
            android:textSize="@dimen/default_text_size"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="9.0M"
            android:gravity="center_vertical"
            android:textSize="@dimen/default_text_size"
            />
    </LinearLayout>

</LinearLayout>
